creusot/tests/should_fail/prusti/logic/ghost.stderr
error: final operator
 --> ghost.rs:6:6
  |
6 |     *x
  |      ^
  |
note: the lint level is defined here
 --> ghost.rs:4:1
  |
4 | #[logic('x)]
  | ^^^^^^^^^^^^
  = note: this error originates in the attribute macro `logic` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: function `fin` is never used
 --> ghost.rs:5:4
  |
5 | fn fin<'now, 'x, X>(x: &'now mut X) -> X {
  |    ^^^
  |
  = note: `#[warn(dead_code)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

